--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     </head>
     <body>
         <canvas id="canvas" width="512" height="512"></canvas>
-        <script src="./lib/stats.min.js"></script>
-        <script src="./lib/dat.gui.min.js"></script>
-        <script src="./js/main.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
