--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Gray-Scott Reaction Diffusion in WebGL</title>
-        <style>
-            body {
-                margin: 0;
-                overflow: hidden;
-            }
-        </style>
-    </head>
-    <body>
-        <canvas id="canvas" width="512" height="512"></canvas>
-        <script type="module" src="./js/main.js"></script>
-    </body>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
+<title>Gray-Scott Reaction Diffusion in WebGL</title>
+<style>
+body {
+  margin: 0;
+  overflow: hidden;
+}
+</style>
+</head>
+<body>
+  <canvas id="canvas" width="512" height="512"></canvas>
+  <script type="module" src="./js/main.js"></script>
+</body>
 </html>
